Mise à jour du notebook Jupyter : correction d'erreurs et ajout d'images SVG, stockées dans le dossier img

--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ISN : Le Son\n",
     "\n",
-    "## Sommaire_\n",
+    "## Sommaire\n",
     "1. Définition physique du son\n",
     "2. Le son numérique : format non compressé WAV.\n",
     "\n",
@@ -57,6 +57,8 @@
     "\n",
     "Cette technique demande aussi plus de calcul à l'ordinateur pour lire le son, à cause de la décompression. Cela cette charge de calcul supplémentaire peut être embêtante dans certain cas, comme le jeu vidéo, qui demande déjà des calculs complexes à l'ordinateur (lumière, modèles 3D, physique, affichage graphique...).\n",
     "\n",
+    "\n",
+    "\n",
     "### Le format WAV et la norme RIFF\n",
     "#### Qu'est-ce que la norme RIFF ?\n",
     "Avant de comprendre le fonctionnement d'un son de format WAV, il faut connaître le fonctionnement de la norme utilisée par ce dernier, la norme RIFF.\n",
@@ -67,8 +69,28 @@
     "* Partie `cksz` : nombre entier stocké sur 32 bits non-signé (positif ou nul, compris sur $[0; 2^{32}[$), indique la taille en bits de la partie `data` dont nous allons parler après.\n",
     "* Partie `data` : données contenues par le chunk. Taille indiqué par la partie `cksz`. On peut trouver à la fin de cette partie un bit nul, permettant de stocker des données de taille diverses sans pérturber la structure du fichier.\n",
     "\n",
-    "Un fichier suivant la norme RIFF possèdera tout d'abord un &laquo;*chunk* principal (le *chunk* RIFF), comportant dans la partie `ckid` la valeur `RIFF` , dans la partie `cksz` la taille de chunk principal, qui aura, pour un fichier de $t$ bits, la valeur $t - 64$.\n",
-    "Enfin dans la partie `data`, on touuvera d'abord l'identifiant *FourCC* du format de fichier utilisé (`WAVE` pour un fichier WAV par exemple), puis les données utiles du fichier, divisées en *chunks*. Il est a noter que seul le *chunk* RIFF peut contenir d'autres *chunks*.\n",
+    "<figure>\n",
+    "    <img alt=\"Organisation d'un chunk de la norme RIFF\" src=\"img/RIFF_Chunk.svg\" />\n",
+    "    <figcaption>\n",
+    "        <center>\n",
+    "            Organisation d'un chunk de la norme RIFF.<br/>\n",
+    "            Par Adrien Gesta-Fline — Travail personnel, CC BY-SA 4.0, <a href=\"https://commons.wikimedia.org/w/index.php?curid=60836496\">https://commons.wikimedia.org/w/index.php?curid=60836496</a>\n",
+    "        </center>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "Un fichier suivant la norme RIFF possèdera tout d'abord un *chunk* principal (le *chunk* RIFF), comportant dans la partie `ckid` la valeur `RIFF` , dans la partie `cksz` la taille de chunk principal, qui aura, pour un fichier de $t$ bits, la valeur $t - 64$.\n",
+    "Enfin dans la partie `data`, on trouvera d'abord l'identifiant *FourCC* du format de fichier utilisé (`WAVE` pour un fichier WAV par exemple), puis les données utiles du fichier, divisées en *chunks*. Il est a noter que seul le *chunk* RIFF peut contenir d'autres *chunks*.\n",
+    "\n",
+    "<figure>\n",
+    "    <img alt=\"Organisation d'un fichier RIFF.\" src=\"img/RIFF_File_Structure.svg\" />\n",
+    "    <figcaption>\n",
+    "        <center>\n",
+    "           Organisation d'un fichier RIFF.<br/>\n",
+    "           Par Adrien Gesta-Fline — Travail personnel, CC BY-SA 4.0, <a href=\"https://commons.wikimedia.org/w/index.php?curid=60835577\">https://commons.wikimedia.org/w/index.php?curid=60835577</a>\n",
+    "        </center>\n",
+    "    </figcaption>\n",
+    "</figure>\n",
     "\n",
     "La norme RIFF utilise pour les données un codage *little-endian* (traduit parfois par &laquo;petit-boutiste&raquo;), c'est à dire que les données sont codés de façon à ce que les bits de poids faible soient placés en premier : en outre, le chiffre 256 en binaire sera enregistré en *little-endian* `00000001`, alors qu'on le note usuellement `10000000`.\n",
     "\n",
