Notebook SynthéSon : faute de frappe :-)

--- a/son/SynthéSon.ipynb
+++ b/son/SynthéSon.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Synthéitsation sonore\n",
+    "# Synthétisation sonore\n",
     "## Présentation\n",
     "### But de l'application\n",
     "Application de synthétisation sonore. Permettera de synthétiser des sons complexes et de les exporter au format WAV.\n",
