--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -430,8 +430,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Application à la synthétisation d'un son.\n",
-    "Partant du principe que tous les sons générés par un instrument de musique sont périodiques, on peut donc les modéliser selon une somme de signaux sinusoidaux. Si certains instruments, comme le diapason, émettent un son pur se résumant à un seul signal sinusoïdal, d'autres instruments génèrent des sons complexes qui sont plus difficiles à synthétiser."
+    "### Application à la synthétisation d'un son.\n",
+    "Partant du principe que tous les sons générés par un instrument de musique sont périodiques, on peut donc les modéliser selon une somme de signaux sinusoidaux. Si certains instruments, comme le diapason, émettent un son pur se résumant à un seul signal sinusoïdal, d'autres instruments génèrent des sons complexes qui sont plus difficiles à synthétiser.\n",
+    "#### Codage du son\n",
+    "On considère que l'on va coder sur $b$ bits un son complexe dont le signal en fonction du temps $t$ en secondes est modélisé par la fonction $s(t)$.\n",
+    "Le fichier sonore aura une fréquence d'échantillonage noté $\\epsilon$, en Hz.\n",
+    "\n",
+    "Le $n$-ième échantillon du son aura comme valeur binaire :\n"
    ]
   },
   {
