--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -102,16 +102,16 @@
     "Enfin dans la partie `data`, on trouvera d'abord l'identifiant *FourCC* du format de fichier utilisé (`WAVE` pour un fichier WAV par exemple), puis les données utiles du fichier, divisées en *chunks*. Il est a noter que seul le *chunk* RIFF peut contenir d'autres *chunks*.\n",
     "\n",
     "<center>\n",
-    "<figure>\n",
-    "    <img alt=\"Organisation d'un fichier RIFF.\" src=\"img/RIFF_File_Structure.svg\" />\n",
-    "    <figcaption>\n",
-    "       Organisation d'un fichier RIFF.<br/>\n",
-    "       Par Adrien Gesta-Fline — Travail personnel, CC BY-SA 4.0, <a href=\"https://commons.wikimedia.org/w/index.php?curid=60835577\">https://commons.wikimedia.org/w/index.php?curid=60835577</a>\n",
-    "    </figcaption>\n",
-    "</figure>\n",
+    "    <figure>\n",
+    "        <img alt=\"Organisation d'un fichier RIFF.\" src=\"img/RIFF_File_Structure.svg\" />\n",
+    "        <figcaption>\n",
+    "           Organisation d'un fichier RIFF.<br/>\n",
+    "           Par Adrien Gesta-Fline — Travail personnel, CC BY-SA 4.0, <a href=\"https://commons.wikimedia.org/w/index.php?curid=60835577\">https://commons.wikimedia.org/w/index.php?curid=60835577</a>\n",
+    "        </figcaption>\n",
+    "    </figure>\n",
     "</center>\n",
     "\n",
-    "La norme RIFF utilise pour les données un codage *little-endian* (traduit parfois par &laquo;petit-boutiste&raquo;), c'est à dire que les données sont codés de façon à ce que les bits de poids faible soient placés en premier : en outre, le chiffre 256 en binaire sera enregistré en *little-endian* `00000001`, alors qu'on le note usuellement `10000000`."
+    "La norme RIFF utilise pour certaines données un codage *little-endian* (traduit parfois par &laquo;petit-boutiste&raquo;), c'est à dire que les données sont codés de façon à ce que les bits de poids faible soient placés en premier : en outre, le chiffre 256 en binaire sera enregistré en *little-endian* `00000001`, alors qu'on le note usuellement `10000000`."
    ]
   },
   {
@@ -258,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -362,16 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f57f17670f0>]"
+       "[<matplotlib.lines.Line2D at 0x7f5b2805eb70>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -397,9 +401,10 @@
     "def s(t):\n",
     "    result = 0\n",
     "    p = 2 * np.pi\n",
-    "    amps = [1, 2, 3, 4]\n",
-    "    freqs = [4, 3, 2, 1]\n",
-    "    shifts = [1, 1, 2, 3]\n",
+    "    amps = [1, 2, 3, 4] # Amplitudes\n",
+    "    freqs = [4, 3, 2, 1] # Fréquences\n",
+    "    shifts = [1, 1, 2, 3] # Décalages\n",
+    "    # Somme des harmoniques\n",
     "    for i in range(0, 4):\n",
     "        result += amps[i] * np.sin(p * freqs[i] * (t - shifts[i]))\n",
     "    return result\n",
@@ -430,13 +435,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Application à la synthétisation d'un son.\n",
-    "Partant du principe que tous les sons générés par un instrument de musique sont périodiques, on peut donc les modéliser selon une somme de signaux sinusoidaux. Si certains instruments, comme le diapason, émettent un son pur se résumant à un seul signal sinusoïdal, d'autres instruments génèrent des sons complexes qui sont plus difficiles à synthétiser.\n",
-    "#### Codage du son\n",
-    "On considère que l'on va coder sur $b$ bits un son complexe dont le signal en fonction du temps $t$ en secondes est modélisé par la fonction $s(t)$.\n",
-    "Le fichier sonore aura une fréquence d'échantillonage noté $\\epsilon$, en Hz.\n",
+    "###### Spectre de Fourier\n",
+    "Nous avons précedemment représenté les signaux sonores, modélisés par des séries de Fourier, en fonction du temps, ce qui nous donne une forme d'onde. Cependant, cette forme est relativement peu exploitable directement, et ne met pas forcément en évidence les différents harmonqiues du son complexe. Mais on peut représenter différement un son complexe, en utilisant ce qu'on appelle un spectre de Fourier.\n",
     "\n",
-    "Le $n$-ième échantillon du son aura comme valeur binaire :\n"
+    "Un spectre de Fourier représente sur un graphique les harmoniques sous forme de pics de hauteurs variable. Le pic d'un harmonique a pour abscisse sa fréquence, et comme hauteur (ordonnée de son sommet) son amplitude.\n",
+    "\n",
+    "<center>\n",
+    "    <figure>\n",
+    "        <img alt=\"Spectre de Fourier\" src=\"img/Spectrogram_tone_sone.png\" />\n",
+    "        <figcaption>\n",
+    "            Spectre de Fourier.<br/>\n",
+    "            By Debianux - Travail personnel, CC BY-SA 3.0, <a href=\"https://commons.wikimedia.org/w/index.php?curid=4857663\">https://commons.wikimedia.org/w/index.php?curid=4857663</a>\n",
+    "        </figcaption>\n",
+    "    </figure>\n",
+    "</center>\n"
    ]
   },
   {
@@ -445,6 +457,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Déterminer les amplitudes des harmoniques signal sonore périodique à partir des fréquences et des décalages temporels.\n",
+    "Pour créer des graphes de Fourier, il peut être nécessaire de calculer les amplitudes des harmoniques.\n",
+    "\n",
+    "Pour ce faire, il faut connaître les fréquences des harmoniques du son, les décalages temporels, et la courbe du signal en fonction du temps $t$, représentant la fonction $s(t)$.\n",
+    "\n",
+    "On notera $T$ la période du signal, et $f$ sa fréquence.\n",
+    "\n",
+    "L'amplitude $A_n$ du $n$-ième harmonique du signal sonore est donnée par :\n",
+    "\n",
+    "$$A_n = \\frac{2}{T} \\int_{0}^{T} s(t)\\sin(2\\pi f_n (t-\\phi_n)) \\mathrm{d}t \\\\ = 2f\\int_{0}^{\\frac{1}{f}} s(t)\\sin(2\\pi f_n (t-\\phi_n))\\mathrm{d}t$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application à la synthétisation d'un son.\n",
+    "Partant du principe que tous les sons générés par un instrument de musique sont périodiques, on peut donc les modéliser selon une somme de signaux sinusoidaux. Si certains instruments, comme le diapason, émettent un son pur se résumant à un seul signal sinusoïdal, d'autres instruments génèrent des sons complexes qui sont plus difficiles à synthétiser.\n"
+   ]
   }
  ],
  "metadata": {
