Précision des applications ne fonctionnant pas sur GitHub.

--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -252,7 +252,7 @@
     "##### Définition mathématique du son pur.\n",
     "La vibration d'un son pur de fréquence $f$, et d'amplitude $A$, peut être représenté mathématiquement en fonction du temps par une fonction $s(t)$ définie telle que : $$s(t) = A \\sin(2 \\pi f t)$$\n",
     "\n",
-    "Si dessous, une application de visualisation interactive de l'onde :"
+    "Si dessous, une application de visualisation interactive de l'onde *(ne fonctionne pas sur GitHub !)*:"
    ]
   },
   {
@@ -359,7 +359,7 @@
     "\n",
     "On aura donc, comme fonction représentant le signal sonore $s(t)$ :\n",
     "$$f(t) = \\sum_{k=1}^{4} h_k(t) = h_1(t) + h_2(t) + h_3(t) + h_4(t) \\\\ = A_1 \\sin(2 \\pi f_1 \\times (t - \\phi_1)) + A_2 \\sin(2 \\pi f_2 \\times (t - \\phi_2)) + a_3 \\sin(2 \\pi f_3 \\times (t - \\phi_3)) + A_4 \\sin(2 \\pi f_4 \\times (t - \\phi_4)) \\\\ = 1\\sin(2 \\pi 400 \\times (t - 1)) + 2 \\sin(2 \\pi 500 \\times (t - 2)) + 3 \\sin(2 \\pi 600 \\times (t - 3)) + 4 \\sin(2 \\pi 700 \\times (t - 3))$$\n",
-    "Qui aura comme représentation :"
+    "Qui aura comme représentation : *(ne fonctionne pas sur GitHub !)*"
    ]
   },
   {
