Ajout d'un bloc notes simplifié sur la définition physique du son.

--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -25,7 +25,7 @@
     "D'autres valeurs physiques peuvent cependant varier.\n",
     "\n",
     "### Intensité sonore, niveau sonore.\n",
-    "Le son est une onde mécanique, qui transmet donc une certaie énergie. Il convient donc de caractériser cette énergie.\n",
+    "Le son est une onde mécanique, qui transmet donc une certaine énergie. Il convient donc de caractériser cette énergie.\n",
     "Une onde sonore est une onde à trois dimensions, qui est cependant captée sur un récépteur utilisant une membrane plane : on peut donc caractériser une grandeur énergétique à partir du son en fonction d'une surface.\n",
     "C'est ainsi que l'on peut définir **l'intensité sonore** d'un son, notée $I$, exprimée en W∙m<sup>-2</sup>, comme étant la puissance reçue d'un son par une surface de 1 m<sup>2</sup>, donnée par la relation :\n",
     "$$I = \\frac{P}{S}$$ avec $P$ puissance énergétique fourni par le son, exprimée en W, et $S$ aire de la surface récéptrice, en m<sup>2</sup>.\n",
