--- a/Accueil.ipynb
+++ b/Accueil.ipynb
@@ -17,6 +17,10 @@
     "\n",
     "*Plusieurs notebooks, de niveau de difficulté variables, seront présents bientôt. En attendant, vous trouverez ici les recherches &laquo;brutes&raquo; que j'ai fait sur le son. Il y aura des mises à jour, soyez à l'affut !*\n",
     "* Recherches &laquo;brutes&raquo; sur le son (niveau **AVANCÉ**) : https://github.com/Killian2001/sonISN/blob/master/son/sonISN.ipynb\n",
+    "* Définition physique du son (niveau **SIMPLE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-definition-physique.ipynb\n",
+    "* Le son numérique (format WAV) (niveau ) :\n",
+    "* Synthétisation sonore : son simples, complexes, séries Fourier (niveau **AVANCÉ**) : \n",
+    "\n",
     "\n",
     "## Programme de synthétisation\n",
     "Je projette de créer un programme de synthétisation sonore, dans un notebook Jupyter, dans un dépôt GitHub à part. Vous pouvez suivre l'avancement ici (niveau **AVANCÉ**):\n",
