--- a/Accueil.ipynb
+++ b/Accueil.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# ISN : Le Son\n",
-    "Par Killian CALLAC\n",
+    "Killian CALLAC\n",
     "\n",
     "## Présentation\n",
     "Bienvenue sur le notebook principal de mon projet en ISN, portant sur le son.\n",
