Décalage temporel => déphasage

--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -336,10 +336,10 @@
     "Soit $g(t)$ fonction représentant la vibration de l'air définie sur $\\mathbb{R}$ par :\n",
     "$$g(t) = A \\sin(2 \\pi f \\times (t - \\phi))$$\n",
     "avec $A \\in \\mathbb{R}$, amplitude du son, $f \\in \\mathbb{R}$, fréquence du son en Hz.\n",
-    "On constate la présence d'un paramètre $\\phi \\in \\mathbb{R}$, qui correspond à un décalage temporel en s : il sera utile dans la définition d'un son complexe.\n",
+    "On constate la présence d'un paramètre $\\phi \\in \\mathbb{R}$, qui correspond à un déphasage en s : il sera utile dans la définition d'un son complexe.\n",
     "\n",
     "On considère maintenant un son complexe modélisé par une fonction constitué de $n \\in \\mathbb{N}$ harmoniques, un harmonique de rang $n$ étant modélisé par une fonction $h_n(t)$ définie sur $\\mathbb{R}$ :\n",
-    "$$h_n(t) = A_n \\sin(2 \\pi f_n \\times (t - \\phi_n))$$, avec $A_n \\in \\mathbb{R}$, amplitude de l'harmonique $n$, $f_n \\in \\mathbb{R}$, fréquence de l'harmonique $n$ en Hz et $\\phi_n \\in \\mathbb{R}$, décalage temporel de l'harmonique $n$ en s.\n",
+    "$$h_n(t) = A_n \\sin(2 \\pi f_n \\times (t - \\phi_n))$$, avec $A_n \\in \\mathbb{R}$, amplitude de l'harmonique $n$, $f_n \\in \\mathbb{R}$, fréquence de l'harmonique $n$ en Hz et $\\phi_n \\in \\mathbb{R}$, déphasage de l'harmonique $n$ en s.\n",
     "\n",
     "Le son complexe de $n$ harmoniques peut-être modélisé avec une fonction $s(t)$ sur $\\mathbb{R}$ en fonction du temps en secondes $t$ par :"
    ]
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut par exemple définir un son complexe constitué de 4 harmoniques d'amplitudes respectives $A_1 = 1$, $A_2 = 2$, $A_3 = 3$, $A_4 = 4$, de fréquences respectives $f_1 = 4$ Hz, $f_2 = 3$ Hz, $f_3 = 2$ Hz, $f_4 = 1$ Hz et de décalages temporels $\\phi_1 = 1$ s, $\\phi_2 = 1$ s, $\\phi_3 = 2$ s, $\\phi_4 = 3$ s.\n",
+    "On peut par exemple définir un son complexe constitué de 4 harmoniques d'amplitudes respectives $A_1 = 1$, $A_2 = 2$, $A_3 = 3$, $A_4 = 4$, de fréquences respectives $f_1 = 4$ Hz, $f_2 = 3$ Hz, $f_3 = 2$ Hz, $f_4 = 1$ Hz et de déphasages $\\phi_1 = 1$ s, $\\phi_2 = 1$ s, $\\phi_3 = 2$ s, $\\phi_4 = 3$ s.\n",
     "\n",
     "On aura donc, comme fonction représentant le signal sonore $s(t)$ :\n",
     "$$f(t) = \\sum_{k=1}^{4} h_k(t) = h_1(t) + h_2(t) + h_3(t) + h_4(t) \\\\ = A_1 \\sin(2 \\pi f_1 \\times (t - \\phi_1)) + A_2 \\sin(2 \\pi f_2 \\times (t - \\phi_2)) + a_3 \\sin(2 \\pi f_3 \\times (t - \\phi_3)) + A_4 \\sin(2 \\pi f_4 \\times (t - \\phi_4)) \\\\ = 1\\sin(2 \\pi 400 \\times (t - 1)) + 2 \\sin(2 \\pi 500 \\times (t - 2)) + 3 \\sin(2 \\pi 600 \\times (t - 3)) + 4 \\sin(2 \\pi 700 \\times (t - 3))$$\n",
@@ -462,10 +462,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Déterminer les amplitudes des harmoniques signal sonore périodique à partir des fréquences et des décalages temporels.\n",
+    "###### Déterminer les amplitudes des harmoniques signal sonore périodique à partir des fréquences et des déphasages.\n",
     "Pour créer des graphes de Fourier, il peut être nécessaire de calculer les amplitudes des harmoniques.\n",
     "\n",
-    "Pour ce faire, il faut connaître les fréquences des harmoniques du son, les décalages temporels, et la courbe du signal en fonction du temps $t$, représentant la fonction $s(t)$.\n",
+    "Pour ce faire, il faut connaître les fréquences des harmoniques du son, les déphasages, et la courbe du signal en fonction du temps $t$, représentant la fonction $s(t)$.\n",
     "\n",
     "On notera $T$ la période du signal, et $f$ sa fréquence.\n",
     "\n",
