Ajout d'un notebook sur la Synthé Sonore.

--- a/Accueil.ipynb
+++ b/Accueil.ipynb
@@ -19,7 +19,7 @@
     "* Recherches &laquo;brutes&raquo; sur le son (niveau **AVANCÉ**) : https://github.com/Killian2001/sonISN/blob/master/son/sonISN.ipynb\n",
     "* Définition physique du son (niveau **SIMPLE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-definition-physique.ipynb\n",
     "* Le son numérique (format WAV) (niveau **INTERMEDIAIRE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-numerique-wav.ipynb\n",
-    "* Synthétisation sonore : son simples, complexes, séries Fourier (niveau **AVANCÉ**) : \n",
+    "* Synthétisation sonore : son simples, complexes, séries Fourier (niveau **INTERMEDIAIRE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-synthetisation.ipynb\n",
     "\n",
     "\n",
     "## Programme de synthétisation\n",
