--- a/son/sonISN.ipynb
+++ b/son/sonISN.ipynb
@@ -252,7 +252,7 @@
     "##### Définition mathématique du son pur.\n",
     "La vibration d'un son pur de fréquence $f$, et d'amplitude $A$, peut être représenté mathématiquement en fonction du temps par une fonction $s(t)$ définie telle que : $$s(t) = A \\sin(2 \\pi f t)$$\n",
     "\n",
-    "Si dessous, une application de visualisation interactive de l'onde *(ne fonctionne pas sur GitHub !)*:"
+    "Çi dessous, une application de visualisation interactive de l'onde *(ne fonctionne pas sur GitHub !)*:"
    ]
   },
   {
@@ -403,7 +403,7 @@
     "    p = 2 * np.pi\n",
     "    amps = [1, 2, 3, 4] # Amplitudes\n",
     "    freqs = [4, 3, 2, 1] # Fréquences\n",
-    "    shifts = [1, 1, 2, 3] # Décalages\n",
+    "    shifts = [1, 1, 2, 3] # Déphasages\n",
     "    # Somme des harmoniques\n",
     "    for i in range(0, 4):\n",
     "        result += amps[i] * np.sin(p * freqs[i] * (t - shifts[i]))\n",
