Liens relatifs vers les notebooks.

--- a/Accueil.ipynb
+++ b/Accueil.ipynb
@@ -11,15 +11,15 @@
     "Bienvenue sur le notebook principal de mon projet en ISN, portant sur le son.\n",
     "Vous y trouverez les différents liens vers des notebooks secondaires (recherches sur le son, programmes lié au son).\n",
     "\n",
-    "## Recherches sur le son.\n",
+    "## Recherches sur le son\n",
     "### Qu'est-ce que c'est ?\n",
     "Il s'agit de notebooks Jupyter présentant les différentes recherches que j'ai faites dans le cadre de l'ISN sur le son. Vous y trouverez des informations sur les propriétés du son, son codage, les théories mathématiques autour du signal sonore.\n",
     "\n",
-    "*Plusieurs notebooks, de niveau de difficulté variables, seront présents bientôt. En attendant, vous trouverez ici les recherches &laquo;brutes&raquo; que j'ai fait sur le son. Il y aura des mises à jour, soyez à l'affut !*\n",
-    "* Recherches &laquo;brutes&raquo; sur le son (niveau **AVANCÉ**) : https://github.com/Killian2001/sonISN/blob/master/son/sonISN.ipynb\n",
-    "* Définition physique du son (niveau **SIMPLE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-definition-physique.ipynb\n",
-    "* Le son numérique (format WAV) (niveau **INTERMEDIAIRE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-numerique-wav.ipynb\n",
-    "* Synthétisation sonore : son simples, complexes, séries Fourier (niveau **INTERMEDIAIRE**) : https://github.com/Killian2001/sonISN/blob/master/son/son-synthetisation.ipynb\n",
+    "\n",
+    "* Recherches &laquo;brutes&raquo; sur le son (niveau **AVANCÉ**) : [Cliquez ici](/son/sonISN.ipynb)\n",
+    "* Définition physique du son (niveau **SIMPLE**) : [Cliquez ici](son/son-definition-physique.ipynb)\n",
+    "* Le son numérique (format WAV) (niveau **INTERMEDIAIRE**) : [Cliquez ici](son/son-numerique-wav.ipynb)\n",
+    "* Synthétisation sonore : son simples, complexes, séries Fourier (niveau **AVANCÉ**) : [Cliquez ici](son/son-synthetisation.ipynb)\n",
     "\n",
     "\n",
     "## Programme de synthétisation\n",
@@ -32,13 +32,18 @@
     "***NOTE IMPORTANTE : les programmes présents dans les notebooks sont susceptibles de ne pas fonctionner sur GitHub (programmes ipywidgets). Il est également possible qu'il y ait quelques problèmes d'affichage (problème de saut de ligne LaTeX, pas d'images) Si vous voulez bénéficer d'un confort de lecture optimal, cliquez sur les liens suivants pour télécharger les dépôts sur votre espace Jupyter :***\n",
     "\n",
     "* sonISN : http://jupyterhub.ecmorlaix.bzh:8092/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2FKillian2001%2FsonISN&branch=jupyter-version&subPath=Accueil.ipynb&app=notebook\n",
-    "* SynthéSon : http://jupyterhub.ecmorlaix.bzh:8092/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2FKillian2001%2FSyntheSon&branch=master&subPath=SynthéSon.ipynb&app=notebook"
+    "* SynthéSon : http://jupyterhub.ecmorlaix.bzh:8092/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2FKillian2001%2FSyntheSon&branch=master&subPath=SynthéSon.ipynb&app=notebook\n",
+    "\n",
+    "***\n",
+    "Machines virtuelles Binder :"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -59,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
