Ajout d'une partie en python son numérique.

--- a/son/son-numerique-wav.ipynb
+++ b/son/son-numerique-wav.ipynb
@@ -20,7 +20,15 @@
     "\n",
     "ans le cas d'un son, le signal codé correspond à une impulsion électrique envoyé par le micro à l'enregistrement, ou à une impulsion électrique envoyé au matériel audio (enceinte par exemple). Cette impulsion pourra donc prendre, pour un son codé sur $n$ bits, $2^n$ niveaux différents. Ainsi, un son 8 bits proposera des impulsions de $2^8 = 256$ niveaux.\n",
     "\n",
-    "Cependant, un son numérique ne peut se réduire qu'à un niveau électrique : il s'agit d'une suite d'impulsions électriques, évoluant à travers le temps. Il faut donc établir la fréquence d'envoi des impulsions électriques : on parle d'**échantillonnage** du son, exprimé en Hz. Un son ayant un échantillonage $e$ Hz fournira $e$ impulsions électriques par seconde. Un échantillonnage courant est l'échantillonnage de 44100 Hz : il y aura donc 44100 impulsions électriques par secondes qui seront fournies par le son."
+    "Cependant, un son numérique ne peut se réduire qu'à un niveau électrique : il s'agit d'une suite d'impulsions électriques, évoluant à travers le temps. Il faut donc établir la fréquence d'envoi des impulsions électriques : on parle d'**échantillonnage** du son, exprimé en Hz. Un son ayant un échantillonage $e$ Hz fournira $e$ impulsions électriques par seconde. Un échantillonnage courant est l'échantillonnage de 44100 Hz : il y aura donc 44100 impulsions électriques par secondes qui seront fournies par le son.\n",
+    "\n",
+    "Pour quoi 44100 Hz ? Le domaine d'audibilité des fréquences snoores d'une oreille humaine est au maximum compris dans l'intervalle $[20 ; 22050]$ : on est donc amené à coder un signal dont la fréquence peut s'étendre jusqu'à 22050 Hz. Or, Shannon, le mathématcien ayant défini les principes de bases du codage de l'information, à défini le théorème suivant :\n",
+    "\n",
+    "> La représentation discrète d'un signal exige des échantillons régulièrement espacés à une fréquence d'échantillonnage supérieure au double de la fréquence maximale présente dans ce signal.\n",
+    "\n",
+    "D'après ce théorème, un signal d'une fréquence $f$ doit avoir un échantillonnage $f_e$ égal au double de la fréquence du signal, ainsi $f_e = 2f$, on a sinon un risque de pertes.\n",
+    "\n",
+    "Si l'on est donc amené amené à coder un signal jusqu'à 22050 Hz, il faut donc que sa fréquence d'échantillonnage soit égale à $2 \\times 22050 = 44100$ Hz, pour que l'ensemble des fréquences audibles par l'oreille soit restitué sans pertes."
    ]
   },
   {
@@ -75,15 +83,216 @@
     "    </figure>\n",
     "</center>\n",
     "\n",
-    "La norme RIFF utilise pour certaines données un codage *little-endian* (traduit parfois par &laquo;petit-boutiste&raquo;), c'est à dire que les données sont codés de façon à ce que les bits de poids faible soient placés en premier : en outre, le chiffre 256 en binaire sera enregistré en *little-endian* `00000001`, alors qu'on le note usuellement `10000000`."
+    "La norme RIFF utilise pour certaines données un codage *little-endian* (traduit parfois par &laquo;petit-boutiste&raquo;), c'est à dire que les données sont codés de façon à ce que les bits de poids faible soient placés en premier : en outre, le chiffre 256 en binaire sera enregistré en *little-endian* `00000001`, alors qu'on le note usuellement `10000000`.\n",
+    "\n",
+    "#### Qu'est-ce qu'un fichier WAV ?\n",
+    "\n",
+    "Un fichier WAV ou WAVE (Waveform Audio File Format) est un format de fichier conteneur destiné à contenir de l'audio, créé par Microsoft et IBM en 1991. Il suit, dans son architecture, la norme RIFF. Il est souvent considéré, à tort, comme un format de fichier audio non compressé, sans perte : en réalité, du fait de sa nature de format de fichier conteneur, il peut aussi bien contenir des sons non-compressés (PCM par exemple) que des formats compressés, sans pertes (FLAC par exemple) ou avec pertes (MP3 par exemple). Le format WAV est malgré tout fortement utilisé, car comme il s'agit d'un format conteneur, il est possible de créer des sons avec des fonctionnalités propres à des logiciels d'édition sans problèmes de compatibilité avec d'autres logiciels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### En-tête du fichier WAV\n",
+    "\n",
+    "Un fichier WAV contient, en son tout début, un en-tête contenant différentes informations sur le fichier. Ces informations sont définies dans l'en-tête du chunk principal, ainsi que dans un sous-chunk dédié et dans l'en-tête du chunk contenant les données sonores :\n",
+    "\n",
+    "<table>\n",
+    "    <thead>\n",
+    "        <tr>\n",
+    "            <th>Nom</th>\n",
+    "            <th>Taille (octet)</th>\n",
+    "            <th>Endian</th>\n",
+    "            <th>Description</th>\n",
+    "        </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <th colspan=\"4\"><strong>Chunk RIFF (principal)</strong></th>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>ckid</td>\n",
+    "            <td>4</td>\n",
+    "            <td>big</td>\n",
+    "            <td>Identifiant du chunk, ici <code>RIFF.</code></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>cksz</td>\n",
+    "            <td>4</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Taille chunk principal = taille du fichier - 8 octet.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>format</td>\n",
+    "            <td>4</td>\n",
+    "            <td>big</td>\n",
+    "            <td>Format du fichier, en quatre caractères, ici <code>WAVE</code>.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <th colspan=\"4\">Premier sous-chunk, en-tête propre aux fichiers WAV.</th>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>ckid</td>\n",
+    "            <td>4</td>\n",
+    "            <td>big</td>\n",
+    "            <td>Identifiant du chunk, ici <code>FMT </code>.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>cksz</td>\n",
+    "            <td>4</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Taille du chunk, 8 octets, 16 pour PCM.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>AudioFormat</td>\n",
+    "            <td>2</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Compression audio, 1 pour PCM.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>NumChannels</td>\n",
+    "            <td>2</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Nombre de canaux audio utilisés, 1 en mono, 2 en stéréo.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>SampleRate</td>\n",
+    "            <td>4</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Fréquence d'échantillonnage.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>ByteRate</td>\n",
+    "            <td>4</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Taille du chunk.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>BlockAlign</td>\n",
+    "            <td>2</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Nombre d'octets par échantillon.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>BitsPerChannel</td>\n",
+    "            <td>2</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Nombre de bits par canal.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <th colspan=\"4\">Deuxième sous-chunk, données sonores</th>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>ckid</td>\n",
+    "            <td>4</td>\n",
+    "            <td>big</td>\n",
+    "            <td>Identifiant du chunk, ici <code>data</code>.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>cksz</td>\n",
+    "            <td>4</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Tailles des données, ici taille du fichier - 44.</td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td>datas</td>\n",
+    "            <td>Taille du fichier - 44</td>\n",
+    "            <td>little</td>\n",
+    "            <td>Données sonores.</td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en pratique avec Python\n",
+    "#### Création d'un fichier WAV\n",
+    "Pour créér un fichier WAV en Python, il est tout d'abord nécessaire d'importer le module `wave`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import wave"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On va essayer de créer un fichier WAV mono, ayant une fréquence et un niveau sonore donnés par l'utilisateur.\n",
+    "\n",
+    "On définira d'abord des constantes nécessaires au programme :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "SAMPLING_FREQ = 44100 # Fréquence d'échantillonnage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On demande ensuite à l'utilisateur de rentrer la fréquence et le niveau sonore :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrez la fréquence du son (en Hz):440\n",
+      "Entrez le niveau sonore (0 à 1) :0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "freq = float(input(\"Entrez la fréquence du son (en Hz):\"))\n",
+    "level = float(input(\"Entrez le niveau sonore (0 à 1) :\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On crée ensuite l'en-tête du fichier :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lecture audio d'un fichier WAV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lecture des données d'un fichier WAV"
+   ]
   }
  ],
  "metadata": {
@@ -102,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
