Ajout du programme d'écriture de son dans le notebook numérisation du son.

--- a/son/son-numerique-wav.ipynb
+++ b/son/son-numerique-wav.ipynb
@@ -216,10 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import wave"
@@ -236,48 +234,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLING_FREQ = 44100 # Fréquence d'échantillonnage."
+    "CHANNEL_COUNT = 1 # Nombre de canaux\n",
+    "SAMPLING_FREQ = 44100 # Fréquence d'échantillonnage.\n",
+    "SAMPLE_WIDTH = 1 # Taille en octet d'un échantillon.\n",
+    "FILE_NAME = 'test.wav' # Nom du fichier."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On demande ensuite à l'utilisateur de rentrer la fréquence et le niveau sonore :"
+    "On demande ensuite à l'utilisateur de rentrer la fréquence, le niveau sonore et la durée en secondes :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Entrez la fréquence du son (en Hz):440\n",
-      "Entrez le niveau sonore (0 à 1) :0.5\n"
+      "Entrez le niveau sonore (0 à 1) :0.5\n",
+      "Durée (en s) :3\n"
      ]
     }
    ],
    "source": [
     "freq = float(input(\"Entrez la fréquence du son (en Hz):\"))\n",
-    "level = float(input(\"Entrez le niveau sonore (0 à 1) :\"))"
+    "level = float(input(\"Entrez le niveau sonore (0 à 1) :\"))\n",
+    "duration = float(input(\"Durée (en s) :\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On crée ensuite l'en-tête du fichier :"
+    "On crée ensuite le fichier :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = wave.open(FILE_NAME, 'w') # Création du ficher, w = fichier en écriture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puis on crée l'en-tête du fichier :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE_COUNT = int(duration * SAMPLING_FREQ) # Calcul du nombre d'échantillons.\n",
+    "\n",
+    "# Infos en-tête du fichier WAV.\n",
+    "header = (\n",
+    "    CHANNEL_COUNT, # Nombre de canaux\n",
+    "    SAMPLE_WIDTH, # Taille d'un échantillon (en octets)\n",
+    "    SAMPLING_FREQ, # Fréquence d'échantillonnage\n",
+    "    SAMPLE_COUNT, # Nombre total d'échantillons.\n",
+    "    # Infos de compression (pas utilisées ici).\n",
+    "    'NONE',\n",
+    "    'not compressed'\n",
+    ")\n",
+    "\n",
+    "file.setparams(header) # On crée l'en-tête du fichier WAV."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On procède à l'écriture du fichier WAV, échantillon par échantillon :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sin, pi # Import de la fonction sinus et de la constante pi.\n",
+    "\n",
+    "# On détermine l'amplitude.\n",
+    "AMP = 127.5 * level # Niveau sonore nul = 127.5\n",
+    "\n",
+    "for i in range(0, SAMPLE_COUNT):\n",
+    "    sampleVal = wave.struct.pack(\n",
+    "        'B', # B = valeur entière stockée sur 1 octet\n",
+    "        int(128 + AMP * sin(2 * pi * freq * i / freq)) # Valeur échantillon.\n",
+    "    )\n",
+    "    file.writeframes(sampleVal) # Ecriture de l'échantillon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enfin, on ferme le fichier :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.close()"
    ]
   },
   {
@@ -311,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
