--- a/son/son-numerique-wav.ipynb
+++ b/son/son-numerique-wav.ipynb
@@ -628,6 +628,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ossaudiodev"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
