MàJ environment.yml

--- a/Accueil.ipynb
+++ b/Accueil.ipynb
@@ -35,7 +35,10 @@
     "* SynthéSon : http://jupyterhub.ecmorlaix.bzh:8092/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2FKillian2001%2FSyntheSon&branch=master&subPath=SynthéSon.ipynb&app=notebook\n",
     "\n",
     "***\n",
-    "Machines virtuelles Binder :"
+    "Machines virtuelles Binder :\n",
+    "\n",
+    "Si vous ne souhaitez pas télécharger les notebook Jupyter, ou si vous n'avez tout simplement pas d'espace Jupyter, vous pouvez lancer un notebook *via* Binder :\n",
+    "* sonISN : [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/Killian2001/sonISN/master?filepath=Accueil.ipynb)"
    ]
   },
   {
