Son numérique : ajout d'une partie sur la lecture audio d'un son en Python avec pygame.

--- a/Accueil.ipynb
+++ b/Accueil.ipynb
@@ -38,7 +38,7 @@
     "Machines virtuelles Binder :\n",
     "\n",
     "Si vous ne souhaitez pas télécharger les notebook Jupyter, ou si vous n'avez tout simplement pas d'espace Jupyter, vous pouvez lancer un notebook *via* Binder :\n",
-    "* sonISN : [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/Killian2001/sonISN/master?filepath=Accueil.ipynb)"
+    "* sonISN (ne fonctionne pas): [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/Killian2001/sonISN/master?filepath=Accueil.ipynb)"
    ]
   },
   {
