Rectification du lien vers sonISN.ipynb dans le notebook d'accueil.

--- a/son/son-numerique-wav.ipynb
+++ b/son/son-numerique-wav.ipynb
@@ -335,6 +335,7 @@
     "# On détermine l'amplitude.\n",
     "AMP = 127.5 * level # Niveau sonore nul = 127.5\n",
     "\n",
+    "# Écriture échantillon par échantillon.\n",
     "for i in range(0, SAMPLE_COUNT):\n",
     "    sampleVal = wave.struct.pack(\n",
     "        'B', # B = valeur entière stockée sur 1 octet\n",
