--- a/son/son-synthetisation.ipynb
+++ b/son/son-synthetisation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Synthétisation d'un son\n",
     "\n",
-    "Comment créer une note de musique, correspondant au son d'un instrument.\n",
+    "Comment (mathématiquement) créer une note de musique, correspondant au son d'un instrument.\n",
     "\n",
     "### Sons périodiques\n",
     "Une note de musique est un son périodique : il s'agit d'un son dont l'onde se répète dans le temps. Il possède une période, durée entre deux répétitions, notée $T$, exprimée en secondes, et une longueur d'onde, distance entre deux répétitions, notée $\\lambda$, exprimée en m.\n",
