--- a/son/son-numerique-wav.ipynb
+++ b/son/son-numerique-wav.ipynb
@@ -625,6 +625,8 @@
    "metadata": {},
    "source": [
     "#### Lecture audio d'un fichier WAV\n",
+    "##### Via Pygame #####\n",
+    "\n",
     "**Ne fonctionne pas sur le serveur Jupyter !**\n",
     "\n",
     "Pour lire un fichier sonore, on utilisera la bibliothèque `pygame`, permettant de créer des jeux en Python.\n",
@@ -685,6 +687,27 @@
     "while pygame.mixer.get_busy(): # Boucle de maintient de l'application, on laisse active l'application tant que le lecteur sonore est occupé.\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Via `IPython.display.Audio` #####"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jupyter utilise utilise le terminal IPython, fournissant un environnement Python avancé, contenant notamment un module nommé `IPython.display` permettant la lecture de ressources comme des images, mais aussi la lecture de sons grâce à une classe nommée `Audio`. Nous allons essayer de lire le son de cette manière."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
